WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Dados_integracao__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Dados necessários para a integração.</description>
    <fields>
        <fullName>Atualizacao_status_prospect__c</fullName>
        <label>Atualização de status de prospect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criacao_Lead_OmtezNet__c</fullName>
        <label>Criação de Lead OmtezNet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criacao_pre_matricula_adulto__c</fullName>
        <label>Criação de pré matrícula adulto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criacao_pre_matricula_teens__c</fullName>
        <label>Criação de pré matrícula teens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Devolver_OmetzNet_Horas__c</fullName>
        <label>Devolver para OmetzNet em (Horas)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Devolver_OmetzNet_Minutos__c</fullName>
        <label>Devolver para OmetzNet em (Minutos)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_values_unit_copy__c</fullName>
        <label>Product values by unit copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantidade_Lead_Comercial__c</fullName>
        <inlineHelpText>Após esta quantidade de Leads para o mesmo comercial o sistema passa a devolver automaticamente para o OmetzNet</inlineHelpText>
        <label>Quantidade de Leads por comercial</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_chamada__c</fullName>
        <label>URL de chamada</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Validacao_cpf_adulto__c</fullName>
        <label>Validação de cpf adulto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validacao_cpf_teens__c</fullName>
        <label>Validação de cpf teens</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integração - OmetzNet</label>
</CustomObject>